--- a/css/mein.css
+++ b/css/mein.css
@@ -34,8 +34,9 @@ body {
 .modal.main {
     position: relative;
     margin: 50% auto;
-    width: 200px;
+    width: 80%;
     text-align: center;
+    overflow: auto;
 }
 
 .modal.main p {
